--- a/web-component-anatomy/poll/index.html
+++ b/web-component-anatomy/poll/index.html
@@ -6,6 +6,11 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script type="module" src="hb-poll.component.js"></script>
+		<style>
+			li {
+				background-color: black !important;
+			}
+		</style>
 	</head>
 	<body>
 		<hb-poll></hb-poll>
