--- a/slide-out-menu-component/index.html
+++ b/slide-out-menu-component/index.html
@@ -5,16 +5,20 @@
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script type="module" src="slide-out-menu.component.js"></script>
+		<script type="text/javascript" src="slide-out-menu.component.js"></script>
 		<style>
 			html, body {
 				font-family: Arial, Helvetica, sans-serif;
+			}
+
+			slide-out-menu {
+				
 			}
 		</style>
 	</head>
 	<body>
 		<slide-out-menu id="menu" theme="purple">
-			<div slot="menu-title">Menu</div>
+			<div slot="menu-title">My Menu</div>
 			<a href="#">One</a>
 			<a href="#">Two</a>
 			<a href="#">Three</a>
