get rid of pollyfills from star rating example

--- a/star-rating-component/index.html
+++ b/star-rating-component/index.html
@@ -5,10 +5,7 @@
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.0.0/custom-elements-es5-adapter.js"></script>
-		<script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.0.0/webcomponents-loader.js"></script>
-		<script src="dist/custom-style-interface.min.js"></script>
-		<script src="dist/hb-star-rating.component.js"></script>
+		<script type="text/javascript" src="hb-star-rating.component.js"></script>
 		<style>
 			html, body {
 				font-size: 1.5em;
